# sendos.ai

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_main.py
core/: settings.py
db/: sessions.py
db/repositories/: inventory.py  users.py
db/tables/: base.py  items.py  users.py
decorators/: auth.py
modules/: passwords.py  token.py
routes/: router.py
routes/api/: router.py
routes/auth/: router.py
schemas/: items.py  users.py
sql/: create_tables.sql
